syntax = "proto3";

option go_package = "protobuf-example/hello";

import "user.proto";

package hello;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message HelloUserRequest {
  string id = 1;
}

message HelloUserReply {
  int32 status = 1;
  hello.User user = 2;
  string message = 3;
}

message PostUserRequest {
  hello.User user = 1;
}

message PostUserReply {
  int32 status = 1;
  string message = 2;
}
